# Boids

./: CMakeLists.txt  README.md
include/: KDTree.h  arena.h  boid.h  camera.h  flock.h  obstacle.h  prey.h
src/: KDTree.cpp  boid.cpp  flock.cpp  main.cpp
src/shaders/: Phong.frag  Phong.vert
